[gd_scene load_steps=2 format=3 uid="uid://batnl3ulwlbrb"]

[ext_resource type="Script" uid="uid://ferog8ixc03x" path="res://scenes/components/interactable_component.gd" id="1_onphe"]

[node name="InteractableComponent" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_onphe")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
